increasing font size to fix contrast ratio

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -210,6 +210,7 @@ svg{
   #cta {
       display: flex;
       flex-direction: column;
+      font-size: 14pt;
   }
   #cta a{
     margin-top: 8px;
